@@ -5,10 +5,13 @@ import model.GroupData;
 import model2.AddContact;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
+import java.util.Set;
 
 public class AddContactInGroup extends TestBase{
 
@@ -21,8 +24,9 @@ public class AddContactInGroup extends TestBase{
                 .withEmail(CommonFunction.randomString(10)));
     }
 
-    @Test
-    void canAddContactInGroup() {
+    @ParameterizedTest
+    @MethodSource("createRandomContact")
+    void canAddContactInGroup(AddContact contact) {
         if (!(app.contacts().getCount() == 0)) {
             app.contacts().createAdd(new AddContact("", "Ivanov", "Ivan", "Street1", "89325665", "2@yandex.com", "","" , "", "", "", ""));
         }
@@ -30,21 +34,25 @@ public class AddContactInGroup extends TestBase{
             app.hbm().CreateGroup(new GroupData());
         }
         var group = app.hbm().getGroupList();
-        AddContact contact;
-        GroupData groupData = group.get(0);
+        AddContact contactAdd;
+        GroupData groupData = group.getFirst();
         var contactsNotInGroup = app.hbm().getContactsNotInGroup();
+        var oldRelated = app.hbm().getContactsInGroup(groupData);
 
         if (contactsNotInGroup.isEmpty()) {
-            app.contacts().createAdd(new AddContact("", "Ivanov", "Ivan", "Street1", "89325665", "2@yandex.com", "","" , "", "", "", ""));
+            contactAdd = contactsNotInGroup.getFirst();
+            app.contacts().inToGroup(contactAdd,groupData);
         }
-        var oldRelated = app.hbm().getContactsInGroup(groupData);
-        contactsNotInGroup = app.hbm().getContactsNotInGroup();
-        contact = contactsNotInGroup.get(0);
-        app.contacts().inToGroup(contact, groupData);
+        else {
+            app.contacts().createAdd(contact);
+            contact = contact.withId(app.hbm().getIdContactByName(contact.firstname()));
+            app.contacts().inToGroup(contact,groupData);
+            contactAdd = contact;
+        }
         var newRelated = app.hbm().getContactsInGroup(groupData);
         var ContactListInGroup = new ArrayList<>(oldRelated);
         ContactListInGroup.add(contact);
-        Assertions.assertEquals(oldRelated.size() + 1, newRelated.size());
+        Assertions.assertEquals(Set.copyOf(newRelated), Set.copyOf(ContactListInGroup));
     }
 
 }
